--- a/CSS_Basics.html
+++ b/CSS_Basics.html
@@ -3,11 +3,14 @@
     background-color: rgb(204, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 105px;
     border-radius: 3px;
     cursor: pointer;
     margin-right: 8px;
+    margin-left: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
     transition: opacity 150ms;
   }
 
@@ -25,10 +28,12 @@
     border-style: solid;
     border-width: 1px;
     color:rgb(6, 95, 211);
-    height: 36px;
-    width: 62px;
     border-radius: 3px;
     cursor: pointer;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 15px;
+    padding-right: 15px;
     transition: background-color 150ms,
       color 300ms;
   }
@@ -46,13 +51,15 @@
     background-color: rgb(29, 161, 242);
     color: white;
     border: none;
-    height: 36px;
-    width: 74px;
     border-radius: 18px;
     font-weight: bold;
     font-size: 15px;
     cursor: pointer;
     margin-left: 8px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 16px;
+    padding-right: 16px;
     transition: box-shadow 150ms;
   }
 
