Added grids to video-info-grid

--- a/youtube.html
+++ b/youtube.html
@@ -19,7 +19,7 @@
     <div class="thumbnail-row">
       <img class="video-thumbnail" src="src/video-thumbnails/thumbnail-1.webp">
     </div>
-    <div>
+    <div class="video-info-grid">
       <div class="channel-picture">
         <img class="profile-picture" src="src/channel-pictures/channel-1.jpeg">
       </div>
