--- a/Grid_Practice/Grid_Practice.html
+++ b/Grid_Practice/Grid_Practice.html
@@ -4,6 +4,12 @@
   <title>Grid Practice</title>
 </head>
 <body>
+  <p>
+    Grid Practice
+  </p>
+  
+  <hr>
+
   <div style="
     display: grid;
     grid-template-columns: 100px 100px;
@@ -61,6 +67,34 @@
     </div>
     <div style="background-color: lightblue">
       2fr
+    </div>
+  </div>
+
+  <div style="
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 40px;;
+  ">
+    <div style="background-color: lightblue; height: 200px;">
+      1fr
+    </div>
+    <div style="background-color: lightpink; height: 200px;">
+      1fr
+    </div>
+    <div style="background-color: lightblue; height: 200px;">
+      1fr
+    </div>
+
+    <div style="background-color: lightpink; height: 200px;">
+      1fr
+    </div>
+    <div style="background-color: lightblue; height: 200px;">
+      1fr
+    </div>
+    <div style="background-color: lightpink; height: 200px;">
+      1fr
     </div>
   </div>
 </body>
