Adding icons to header

--- a/youtube.html
+++ b/youtube.html
@@ -17,14 +17,24 @@
 <body>
   <div class="header">
     <div class="left-section">
-      Left Section
+      <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+      <img class="youtube-logo" src="icons/youtube-logo.svg">
     </div>
     <div class="middle-section">
       <input class="search-bar" type="text" placeholder="Search">
+      <button class="search-button">
+        <img class="search-icon" src="icons/search.svg">
+      </button>
+      <button class="voice-search-button">
+        <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+      </button>
     </div>
     <div class="right-section">
-      Right Section
-    </div>
+      <img class="upload-icon" src="icons/upload.svg">
+      <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+      <img class="notification-icon" src="icons/notifications.svg">
+      <img class="current-user-picture" src="images/channel-pictures/my-channel.jpg">
+    </div>  
   </div>
 
   <div class="video-grid">
