--- a/CSS_Positions/CSS_Position.html
+++ b/CSS_Positions/CSS_Position.html
@@ -6,18 +6,32 @@
 <body style="
   height: 3000px;
   padding-top: 60px;
+  padding-left: 80px;
 ">
   <div style="
     background-color: black;
     color: white;
     position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 50px;
   ">
     Header
   </div>
+
+  <div style="
+    background-color: green;
+    color: white;
+    position: fixed;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    width: 72px;
+  ">
+    Sidebar
+  </div>
+
   <div style="
     background-color: lightblue;
     height: 200px;
@@ -25,6 +39,7 @@
   ">
     Div 1
   </div>
+
   <div style="
     background-color: lightpink;
     height: 200px;
