Added simple sidebar with position: fixed

--- a/youtube.html
+++ b/youtube.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
   <link rel="stylesheet" href="styles/video.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +36,10 @@
       <img class="notification-icon" src="icons/notifications.svg">
       <img class="current-user-picture" src="images/channel-pictures/my-channel.jpg">
     </div>  
+  </div>
+
+  <div class="sidebar">
+    Sidebar
   </div>
 
   <div class="video-grid">
