--- a/CSS_Positions/CSS_Position.html
+++ b/CSS_Positions/CSS_Position.html
@@ -16,8 +16,9 @@
     left: 0;
     right: 0;
     height: 50px;
+    z-index: 100;
   ">
-    Header
+    CSS Position Practice
   </div>
 
   <div style="
@@ -30,6 +31,25 @@
     width: 72px;
   ">
     Sidebar
+    <div style="
+      position: absolute;
+      background-color: red;
+      color: white;
+      right: 0;
+      top: 0;
+    ">
+      x
+    </div>
+  </div>
+
+  <div style="
+    position: absolute;
+    background-color: red;
+    color: white;
+    right: 10px;
+    top: 60px;
+  ">
+    Absolute
   </div>
 
   <div style="
