--- a/CSS_Positions/CSS_Position.html
+++ b/CSS_Positions/CSS_Position.html
@@ -64,8 +64,18 @@
     background-color: lightpink;
     height: 200px;
     width: 200px;
+    position: relative;
   ">
     Div 2
+    <div style="
+      position: absolute;
+      background-color: red;
+      color: white;
+      right: 0;
+      bottom: 0;
+    ">
+      10:20
+    </div>
   </div>
 </body>
 </html>
