--- a/youtube.html
+++ b/youtube.html
@@ -46,6 +46,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-1.webp">
+        <div class="video-time">
+          14:20
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -68,6 +71,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-2.webp">
+        <div class="video-time">
+          8:22
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -90,6 +96,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-3.webp">
+        <div class="video-time">
+          9:13
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -112,6 +121,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-4.webp">
+        <div class="video-time">
+          22:09
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -134,6 +146,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-5.webp">
+        <div class="video-time">
+          11:17
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -156,6 +171,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-6.webp">
+        <div class="video-time">
+          19:59
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -178,6 +196,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-7.webp">
+        <div class="video-time">
+          10:13
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -200,6 +221,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-8.webp">
+        <div class="video-time">
+          7:12
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -222,6 +246,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-9.webp">
+        <div class="video-time">
+          13:17
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -244,6 +271,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-10.webp">
+        <div class="video-time">
+          7:53
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -266,6 +296,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-11.webp">
+        <div class="video-time">
+          4:10
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -288,6 +321,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="video-thumbnail" src="images/video-thumbnails/thumbnail-12.webp">
+        <div class="video-time">
+          4:51
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
