--- a/youtube.html
+++ b/youtube.html
@@ -33,7 +33,12 @@
     <div class="right-section">
       <img class="upload-icon" src="icons/upload.svg">
       <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-      <img class="notification-icon" src="icons/notifications.svg">
+      <div class="notifications-icon-container">
+        <img class="notification-icon" src="icons/notifications.svg">
+        <div class="notifications-count">
+          3
+        </div>
+      </div>
       <img class="current-user-picture" src="images/channel-pictures/my-channel.jpg">
     </div>  
   </div>
