--- a/youtube.html
+++ b/youtube.html
@@ -25,18 +25,37 @@
       <input class="search-bar" type="text" placeholder="Search">
       <button class="search-button">
         <img class="search-icon" src="icons/search.svg">
+        <div class="tooltip">
+          Search
+        </div>
       </button>
       <button class="voice-search-button">
         <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+        <div class="tooltip">
+          Search with your voice
+        </div>
       </button>
     </div>
     <div class="right-section">
-      <img class="upload-icon" src="icons/upload.svg">
-      <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+      <div class="upload-icon-container">
+        <img class="upload-icon" src="icons/upload.svg">
+        <div class="tooltip">
+          Upload your video
+        </div>
+      </div>
+      <div class="youtube-apps-icon-container">
+        <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+        <div class="tooltip">
+          YouTube Apps
+        </div>
+      </div>
       <div class="notifications-icon-container">
         <img class="notification-icon" src="icons/notifications.svg">
         <div class="notifications-count">
           3
+        </div>
+        <div class="tooltip">
+          Notifications
         </div>
       </div>
       <img class="current-user-picture" src="images/channel-pictures/my-channel.jpg">
