Added channel info on profile pictures

--- a/YouTube - final project/youtube.html
+++ b/YouTube - final project/youtube.html
@@ -118,6 +118,17 @@
           <a href="https://www.youtube.com/c/mkbhd">
             <img class="profile-picture" src="images/channel-pictures/channel-1.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-1.jpeg">
+            <div>
+              <p class="channel-author">
+                Marques Brownlee
+              </p>
+              <p class="channel-stats">
+                15M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -151,6 +162,17 @@
           <a href="https://www.youtube.com/c/markiplier">
             <img class="profile-picture" src="images/channel-pictures/channel-2.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-2.jpeg">
+            <div>
+              <p class="channel-author">
+                Markiplier
+              </p>
+              <p class="channel-stats">
+                35M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -184,6 +206,17 @@
           <a href="https://www.youtube.com/user/SSSniperWolf">
             <img class="profile-picture" src="images/channel-pictures/channel-3.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-3.jpeg">
+            <div>
+              <p class="channel-author">
+                SSSniperWolf
+              </p>
+              <p class="channel-stats">
+                5M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -217,6 +250,17 @@
           <a href="https://www.youtube.com/c/veritasium">
             <img class="profile-picture" src="images/channel-pictures/channel-4.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-4.jpeg">
+            <div>
+              <p class="channel-author">
+                Veritasium
+              </p>
+              <p class="channel-stats">
+                32M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -250,6 +294,17 @@
           <a href="https://www.youtube.com/c/CSDojo">
             <img class="profile-picture" src="images/channel-pictures/channel-5.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-5.jpeg">
+            <div>
+              <p class="channel-author">
+                CS Dojo
+              </p>
+              <p class="channel-stats">
+                9M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -283,6 +338,17 @@
           <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
             <img class="profile-picture" src="images/channel-pictures/channel-6.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-6.jpeg">
+            <div>
+              <p class="channel-author">
+                MrBeast
+              </p>
+              <p class="channel-stats">
+                95M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -316,6 +382,17 @@
           <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
             <img class="profile-picture" src="images/channel-pictures/channel-7.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-7.jpeg">
+            <div>
+              <p class="channel-author">
+                RealLifeLore
+              </p>
+              <p class="channel-stats">
+                21M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -349,6 +426,17 @@
           <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
             <img class="profile-picture" src="images/channel-pictures/channel-8.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-8.jpeg">
+            <div>
+              <p class="channel-author">
+                Tech Vision
+              </p>
+              <p class="channel-stats">
+                7M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -382,6 +470,17 @@
           <a href="https://www.youtube.com/c/OFFICIALTHENXSTUDIOS">
             <img class="profile-picture" src="images/channel-pictures/channel-9.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-9.jpeg">
+            <div>
+              <p class="channel-author">
+                ThenX
+              </p>
+              <p class="channel-stats">
+                48M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -415,6 +514,17 @@
           <a href="https://www.youtube.com/user/businessinsider">
             <img class="profile-picture" src="images/channel-pictures/channel-10.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-10.jpeg">
+            <div>
+              <p class="channel-author">
+                Business Insider
+              </p>
+              <p class="channel-stats">
+                27M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -448,6 +558,17 @@
           <a href="https://www.youtube.com/c/Destinationtips">
             <img class="profile-picture" src="images/channel-pictures/channel-11.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-11.jpeg">
+            <div>
+              <p class="channel-author">
+                Destination Tips
+              </p>
+              <p class="channel-stats">
+                8M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
@@ -481,6 +602,17 @@
           <a href="https://www.youtube.com/teded">
             <img class="profile-picture" src="images/channel-pictures/channel-12.jpeg">
           </a>
+          <div class="channel-info">
+            <img class="channel-picture" src="images/channel-pictures/channel-12.jpeg">
+            <div>
+              <p class="channel-author">
+                TED-Ed
+              </p>
+              <p class="channel-stats">
+                31M subscribers
+              </p>
+            </div>
+          </div>
         </div>
         <div class="video-info">
           <p class="video-title">
