Added icon to the website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>YouTube by jaqubm</title>
+  <link rel="icon" type="image/png" href="images/home_picture.jpeg">
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
