Upgraded website logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>jaqubm | YouTube</title>
-  <link rel="icon" type="image/png" href="images/home_picture.jpeg">
+  <link rel="icon" type="image/png" href="icons/youtube-mini-logo.svg">
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
